--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.3",
-    "react-dom": "^16.8.3"
+    "react-app-rewire-hot-loader": "^2.0.1",
+    "react-app-rewired": "^2.1.0",
+    "react-dom": "^16.8.3",
+    "react-hot-loader": "^4.7.1",
+    "react-router-dom": "^4.3.1",
+    "react-scroll": "^1.7.11",
+    "react-syntax-highlighter": "^10.1.3",
+    "styled-components": "^4.1.3",
+    "styled-normalize": "^8.0.6"
   },
   "devDependencies": {
     "react-scripts": "2.1.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom"
   },
   "eslintConfig": {
     "extends": "react-app"
