--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nearform/react-animation": "^1.0.6",
     "react": "^16.8.3",
     "react-app-rewire-hot-loader": "^2.0.1",
     "react-app-rewired": "^2.1.0",
