--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "@nearform/react-animation": "^1.0.6",
+    "immer": "^2.1.0",
     "react": "^16.8.3",
     "react-app-rewire-hot-loader": "^2.0.1",
     "react-app-rewired": "^2.1.0",
     "react-dom": "^16.8.3",
     "react-hot-loader": "^4.7.1",
     "react-router-dom": "^4.3.1",
-    "react-scroll": "^1.7.11",
     "react-syntax-highlighter": "^10.1.3",
     "styled-components": "^4.1.3",
     "styled-normalize": "^8.0.6"
