--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-app-rewired": "^2.1.0",
     "react-dom": "^16.8.3",
     "react-hot-loader": "^4.7.1",
+    "react-new-window": "^0.0.11",
     "react-router-dom": "^4.3.1",
     "react-syntax-highlighter": "^10.1.3",
     "styled-components": "^4.1.3",
