feat: hamar meetup

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "playground",
+  "name": "react-keynote",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://lfbergee.github.io/playground",
